--- a/environment/puppet/modules/base-lamp/files/solr/solrcore.properties
+++ b/environment/puppet/modules/base-lamp/files/solr/solrcore.properties
@@ -7,10 +7,14 @@ solr.replication.confFiles=schema.xml,mapping-ISOLatin1Accent.txt,protwords.txt,
 solr.mlt.timeAllowed=2000
 # You should not set your luceneMatchVersion to anything lower than your Solr
 # Version.
-solr.luceneMatchVersion=LUCENE_35
+solr.luceneMatchVersion=LUCENE_40
 solr.pinkPony.timeAllowed=-1
 # autoCommit after 10000 docs
 solr.autoCommit.MaxDocs=10000
 # autoCommit after 2 minutes
 solr.autoCommit.MaxTime=120000
-solr.contrib.dir=../../contrib
+# autoSoftCommit after 2000 docs
+solr.autoSoftCommit.MaxDocs=2000
+# autoSoftCommit after 10 seconds
+solr.autoSoftCommit.MaxTime=10000
+solr.contrib.dir=../../../contrib
